// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarEditor should render 0 category when tab button is clicked 1`] = `
<div>
  <div
    class="flex flex-col h-[100svh] bg-gradient-to-br from-adlerbggradientfrom to-adlerbggradientto overflow-hidden"
  >
    <div
      class="self-center w-full p-2 font-semibold flex place-content-stretch"
    >
      <div
        class="flex items-center w-1/2 place-content-stretch justify-self-start "
      >
        <div
          class=""
        >
          <button
            class="mr-4 justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
          >
            <img
              alt="Home Icon"
              class="w-10 xl:w-12 "
              src="home.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="flex justify-center w-full"
      >
        <div
          class="text-xl truncate lg:text-4xl font-[roboto] flex gap-2 m-2 w-fit h-fit text-adlerdarkblue"
        >
          Avatar-Editor
        </div>
      </div>
      <div
        class="flex justify-end w-1/2 "
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <button
              class="justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
            >
              <img
                alt="Help Icon"
                class="w-10 xl:w-12"
                src="help.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-2 grid-rows-1 portrait:grid-cols-1 portrait:grid-rows-2  grow lg:rounded-lg"
    >
      <div
        class="flex flex-col portrait:order-2 "
      >
        <div
          class="flex flex-row justify-center space-x-4 p-4 "
        >
          <div
            class=""
          >
            <button
              class="!bg-adleryellow translate-x-[1px] translate-y-[1px] !border-b-2 !border-r-2 !border-transparent justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
              data-testid="avatar-editor-category-tab-0"
            >
              <img
                alt=""
                class="h-8 lg:h-12"
                src="hair.svg"
              />
            </button>
          </div>
          <div
            class=""
          >
            <button
              class="justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
              data-testid="avatar-editor-category-tab-1"
            >
              <img
                alt=""
                class="h-8 lg:h-12"
                src="face.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="p-4 max-h-[77vh] portrait:max-h-[30vh] overflow-auto"
        >
          <div
            class="grid portrait:grid-cols-3 grid-cols-5 gap-5 pt-4 rounded-lg p-4"
          />
        </div>
      </div>
      <div
        class="p-4"
      >
        <mockedavatareditorpreview
          class="relative w-full h-full"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarEditor should render 1 category when tab button is clicked 1`] = `
<div>
  <div
    class="flex flex-col h-[100svh] bg-gradient-to-br from-adlerbggradientfrom to-adlerbggradientto overflow-hidden"
  >
    <div
      class="self-center w-full p-2 font-semibold flex place-content-stretch"
    >
      <div
        class="flex items-center w-1/2 place-content-stretch justify-self-start "
      >
        <div
          class=""
        >
          <button
            class="mr-4 justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
          >
            <img
              alt="Home Icon"
              class="w-10 xl:w-12 "
              src="home.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="flex justify-center w-full"
      >
        <div
          class="text-xl truncate lg:text-4xl font-[roboto] flex gap-2 m-2 w-fit h-fit text-adlerdarkblue"
        >
          Avatar-Editor
        </div>
      </div>
      <div
        class="flex justify-end w-1/2 "
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <button
              class="justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
            >
              <img
                alt="Help Icon"
                class="w-10 xl:w-12"
                src="help.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-2 grid-rows-1 portrait:grid-cols-1 portrait:grid-rows-2  grow lg:rounded-lg"
    >
      <div
        class="flex flex-col portrait:order-2 "
      >
        <div
          class="flex flex-row justify-center space-x-4 p-4 "
        >
          <div
            class=""
          >
            <button
              class="justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
              data-testid="avatar-editor-category-tab-0"
            >
              <img
                alt=""
                class="h-8 lg:h-12"
                src="hair.svg"
              />
            </button>
          </div>
          <div
            class=""
          >
            <button
              class="!bg-adleryellow translate-x-[1px] translate-y-[1px] !border-b-2 !border-r-2 !border-transparent justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
              data-testid="avatar-editor-category-tab-1"
            >
              <img
                alt=""
                class="h-8 lg:h-12"
                src="face.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="p-4 max-h-[77vh] portrait:max-h-[30vh] overflow-auto"
        >
          <div
            class="flex flex-col justify-center items-center"
          >
            <div
              class="flex items-center justify-center gap-2 text-xl font-bold"
            >
              <div
                class=""
              >
                <button
                  class="w-10 justify-center px-2 py-1 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
                  data-testid="leftRangeSliderButton"
                >
                  <img
                    alt=""
                    src="face.svg"
                  />
                </button>
              </div>
              <div
                class="flex !flex-col justify-center items-center"
              >
                <p>
                  1
                </p>
                <input
                  alt="SliderComponent"
                  max="10"
                  min="1"
                  name="Slider"
                  step="1"
                  type="range"
                  value="1"
                />
              </div>
              <div
                class=""
              >
                <button
                  class="w-10 justify-center px-2 py-1 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
                  data-testid="rightRangeSliderButton"
                >
                  <img
                    alt=""
                    src="face.svg"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-4"
      >
        <mockedavatareditorpreview
          class="relative w-full h-full"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarEditor should renders 1`] = `
<div>
  <div
    class="flex flex-col h-[100svh] bg-gradient-to-br from-adlerbggradientfrom to-adlerbggradientto overflow-hidden"
  >
    <div
      class="self-center w-full p-2 font-semibold flex place-content-stretch"
    >
      <div
        class="flex items-center w-1/2 place-content-stretch justify-self-start "
      >
        <div
          class=""
        >
          <button
            class="mr-4 justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
          >
            <img
              alt="Home Icon"
              class="w-10 xl:w-12 "
              src="home.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="flex justify-center w-full"
      >
        <div
          class="text-xl truncate lg:text-4xl font-[roboto] flex gap-2 m-2 w-fit h-fit text-adlerdarkblue"
        >
          Avatar-Editor
        </div>
      </div>
      <div
        class="flex justify-end w-1/2 "
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <button
              class="justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
            >
              <img
                alt="Help Icon"
                class="w-10 xl:w-12"
                src="help.svg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-2 grid-rows-1 portrait:grid-cols-1 portrait:grid-rows-2  grow lg:rounded-lg"
    >
      <div
        class="flex flex-col portrait:order-2 "
      >
        <div
          class="flex flex-row justify-center space-x-4 p-4 "
        >
          <div
            class=""
          >
            <button
              class="!bg-adleryellow translate-x-[1px] translate-y-[1px] !border-b-2 !border-r-2 !border-transparent justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
              data-testid="avatar-editor-category-tab-0"
            >
              <img
                alt=""
                class="h-8 lg:h-12"
                src="hair.svg"
              />
            </button>
          </div>
          <div
            class=""
          >
            <button
              class="justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square flex items-center text-sm rounded-lg hover:cursor-pointer hover:bg-adleryellow lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue"
              data-testid="avatar-editor-category-tab-1"
            >
              <img
                alt=""
                class="h-8 lg:h-12"
                src="face.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="p-4 max-h-[77vh] portrait:max-h-[30vh] overflow-auto"
        >
          <div
            class="grid portrait:grid-cols-3 grid-cols-5 gap-5 pt-4 rounded-lg p-4"
          />
        </div>
      </div>
      <div
        class="p-4"
      >
        <mockedavatareditorpreview
          class="relative w-full h-full"
        />
      </div>
    </div>
  </div>
</div>
`;
